Correct install screen positionning on iOS

--- a/resources/ext.PWA/PWA.css
+++ b/resources/ext.PWA/PWA.css
@@ -22,14 +22,13 @@
 
 #pwa-overlay-text {
   position: absolute;
-  top: 60%;
-  left: 50%;
-  font-size: 1.2em;
+  top:5%;
+  font-size: 1.0em;
   color: white;
-  transform: translate(-50%,-50%);
-  -ms-transform: translate(-50%,-50%);
   text-align: center;
   height: 100%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 #pwa-overlay-text > img {
